# adaptive-text-anonymization

./: .env.example  .gitignore  README.md  pyproject.toml
prompts/dbbio/: gemma_3_27b.md  mistral_small.md  qwen_2_5_7b.md  qwen_3_30b.md
prompts/medqa/: gemma_3_27b.md  mistral_small.md  qwen_2_5_7b.md  qwen_3_30b.md
prompts/pupa/: gemma_3_27b.md  mistral_small.md  qwen_2_5_7b.md  qwen_3_30b.md
prompts/synthpai/: gemma_3_27b.md  mistral_small.md  qwen_2_5_7b.md  qwen_3_30b.md
prompts/tab/: gemma_3_27b.md  mistral_small.md  qwen_2_5_7b.md  qwen_3_30b.md
scripts/: error_analysis.py  evaluate.py  export_prompts.py  plots.py  run_optimization.py
src/adaptive_anonymization/: __init__.py  models.py  optimizer.py  tasks.py
