[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adaptive-text-anonymization"
version = "0.1.0"
description = "Reproduction code for adaptive text anonymization paper."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0" }
authors = [{ name = "Gabriel Loiseau" }]
keywords = [
    "text-anonymization",
    "privacy",
    "prompt-optimization",
    "dspy",
    "gepa",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "datasets>=4.4.1",
    "dspy",
    "gepa>=0.0.17",
    "litellm>=1.80.0",
    "matplotlib>=3.10.7",
    "nltk>=3.9.1",
    "numpy>=1.26",
    "pandas>=2.2",
    "rouge-score>=0.1.2",
    "scipy>=1.13",
    "sentence-transformers>=5.1.2",
    "torch>=2.3",
    "tqdm>=4.66.0",
    "transformers>=4.57",
    "wn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "ruff>=0.7",
]

[project.urls]
Repository = "https://github.com/gloiseau/adaptive-text-anonymization"

[tool.uv.sources]
dspy = { git = "https://github.com/stanfordnlp/dspy" }

[tool.hatch.build.targets.wheel]
packages = ["src/adaptive_anonymization"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "E741"]
